--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,12 @@ button:focus {
   stroke: none;
 }
 
+.add {
+  padding: 10px;
+  font-size: 24px;
+  background: transparent;
+}
+
 .generate {
   position: absolute;
   padding: 10px;
